# mindnlp

./: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  Cnn-dailymail.py  LongformerTokenizer1.py  NOTICE  README.md  SUPPORT_MODEL.md  __init__.py  align_mindnlp  cleanup_and_verify.sh  configuration_mimi.py  embedding.md  eval.py  evaluate.py  falcon_test.py  init_and_update.sh  mintty.exe.stackdump  mkdocs.yml  model_test.sh  modeling_deformable_detr.py-mapping-2024-06-17-18-54-31.csv  modeling_mimi.py  packpage.sh  pytest.ini  reorganize_files.sh  requirements.txt  restore_and_init.sh  run_sft.py  setup.py  test.py  test_ddp.py  test_ddp_comm_hook.py  testlog.txt  train.ipynb  train.py  update_server.sh  zz.py  笔记.ipynb
.claude/agents/: code-reviewer.md  git-agent.md  test-runner.md
.claude/logs/: session-history.md
.devcontainer/: Dockerfile  devcontainer.json
.gitee/: ISSUE_TEMPLATE.en.md  ISSUE_TEMPLATE.zh-CN.md  PULL_REQUEST_TEMPLATE.en.md  PULL_REQUEST_TEMPLATE.zh-CN.md
.github/: gen_mindspore_url.py  install_mindspore.py  kaggle_gpu_test.py  pylint.conf
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: auto_mirror.yaml  ci_pipeline.yaml  dataset_ut_test.yaml  doc_rst_check.yaml  make_wheel_releases.yml  model_ci.yaml  ut_test.yaml
_csrc/cuda/: flash.cu  wkv.cu
applications/Beit/: Understading_BeitForMaskedImageModeling_Mindspore.ipynb  重现 Beit 模型预测被遮盖图像的过程.ipynb
applications/CANINE/: Fine_tune_CANINE_on_IMDb.ipynb  readme.md
applications/CLIPSeg/: Zero_shot_image_segmentation_with_CLIPSeg.ipynb
applications/ConvNeXt/: ConvNeXt.ipynb
applications/DPT/: Dense Vision Transformers.ipynb
applications/GIT/: Fine_tune_GIT_on_an_image_captioning_dataset.ipynb  Inference_with_GIT_for_image_video_captioning_and_image_video_QA .ipynb
applications/GroupViT/: Inference_with_GroupViT_for_zero_shot_semantic_segmentation.ipynb
applications/ImageGPT/: ImageGPT_Application_imagesGeneration.ipynb
applications/LayoutLM/: layoutlm.ipynb
applications/LayoutLMv3/: Fine_tune_LayoutLMv3_on_FUNSD.ipynb
applications/Mask2Former/: Inference_with_Mask2Former.ipynb
applications/MaskFormer/: Inference_with_MaskFormer_for_semantic_+_panoptic_segmentation.ipynb  Minimal_example_of_MaskFormer_inference.ipynb
applications/OneFormer/: Inference_with_OneFormer.ipynb
applications/PerceiverIO/: PerceiverIO.ipynb
applications/SAM/: SAM.ipynb
applications/SegFormer/: SegFormer.ipynb
applications/T5/: Fine_tuning_English_T5_base_on_CNN_Daily_Mail_for_summarization.ipynb
applications/TAPAS/: TAPAS.ipynb
applications/TrOCR/: TrOCR_finetune.ipynb
applications/UPerNet/: Perform_inference_with_UperNetForSemanticSegmentation_(Swin_backbone).ipynb
applications/ViTMAE/: ViT_MAE_visualization_ demo.ipynb
applications/VideoMAE/: Quick_inference_with_VideoMAE.ipynb
benchmarks/: __init__.py
docs/: conf.py  index.rst
engine/: BlockManager.py  Design and test.md  KVCache.py  TransformerDecoderOnly.py  __init__.py  callbacks.py  test_kv_cache.py
examples/: README.md  fasttext.py  machine_translation.py  question_answer.py  relation_extraction.py  rnn.py  sentiment_classification.py  seq2seq.py
examples/mindtorch_v2/ascendc/ascend910a_extras/csrc/opdev/framework/: CMakeLists.txt
examples/mindtorch_v2/ascendc/ascend910a_extras/csrc/opdev/op_host/: CMakeLists.txt  add_rms_norm_ex.cpp  add_rms_norm_ex_tiling.h  grouped_mat_mul_ex.cpp  grouped_mat_mul_ex_tiling.h  paged_attention_ex.cpp  paged_attention_ex_tiling.h  reshape_and_cache_ex.cpp  reshape_and_cache_ex_tiling.h  rope_ex.cpp  rope_ex_tiling.h  swi_glu_ex.cpp  swi_glu_ex_tiling.h
mimi_model/: __init__.py
mindnlp/: __init__.py  amp.py  configs.py  demo.py  evaluate.py  injection.py  modeling_outputs.py  models.py  patch.py  peft.py  peft_lora_mindnlp.ipynb  peft_lora_pytorch.ipynb  safetensors.py  transformers.py
mindnlp-ocr/: ISSUE_2349_REPORT.md  ISSUE_2350_SUMMARY.md  README.md  TESTING.md  VLM-OCR引擎设计.md  mindnlp-OCR模块设计.md  mindnlp-ocr模块设计文档.md  requirements.txt  setup.py
mindtorch/: __init__.py  _bind.py  _dtype.py  _six.py  _tensor.py  _utils.py  configs.py  dispatcher.py  executor.py  hub.py  overrides.py  random.py  return_types.py  serialization.py  storage.py  torch_proxy.py  types.py  version.py
notebooks/: 0.quick_start.ipynb  3.peft.ipynb
open_r1/: module.diff  readme.md
peft/: mapping.py
requirements/: cpu_requirements.txt  dev_requirements.txt  docs_requirements.txt  ocr-requirements.txt  pylint_requirements.txt  release_requirements.txt  requirements.txt  wizard-requirements.txt
scripts/: ascend_vmm.sh  build_and_reinstall.sh  debug_aclnn_mul_relu_raw.py  debug_aclnn_mul_relu_streams.py  debug_aclnn_relu.py  debug_mindtorch_relu.py  debug_mul_only.py  debug_mul_then_relu.py  debug_mul_then_relu_no_cpu.py  debug_mul_then_relu_release.py  debug_mul_then_relu_reset.py  deploy_concurrency.sh  deploy_concurrent.sh  packpage.sh  pylint_check.sh  pytest_310b_watchlist.sh  pytest_ut_st.sh  pytest_ut_with_slow.sh  quick_test.sh  run_pynative_profile.sh  scan_ops_coverage.py  set_ge_o2.sh  start_ocr_service.sh  test_concurrent.sh
tests/: README.md  __init__.py  common.py  conftest.py  load_test.py  pytest.ini  run_test.py  run_test_v2.py  temp001.py  test.py  test_conv_pool.py  test_modeling_mimi.py  test_p0_tensor_gaps.py  test_p1_ops_npu.py  test_random_distributions_v2.py  test_random_gaps_v2.py  test_random_seed_v2.py
text/: __init__.py
tools/: auto_gen.py  op_auto_gen.py
torch4ms/: __init__.py  amp.py  checkpoint.py  config.py  flax.py  mexport.py  minterop.py  ms_config.py  tensor.py  types.py  view.py
transformers/: image_processing_utils.py  kernel_utils.py  modeling_attn_mask_utils.py  modeling_utils.py  processing_utils.py  time_series_utils.py
tutorials/: 0.quick_start.ipynb  1.data_preprocess.ipynb  2.model_construct.ipynb  2.use_trainer.ipynb  3.use_trainer.ipynb  4.pretrained_model.ipynb  4.use_mirror.ipynb  5.workflow.ipynb
utils/: __init__.py  decompress.py  import_utils.py  logging.py  peft_utils.py  save.py
(+6135 files in other folders)
